@@ -1,3 +1,9 @@
+2002-07-23  Gabor Keresztfalvi  <keresztg@mail.com>
+
+	* nlmcode.h (nlm_swap_auxiliary_headers_out): Swapped the order of
+	the MeSsAgEs and CoPyRiGhT tags to make >=NW4.x NLM loaders to
+	show the Copyright string.
+
 2002-07-23  Nick Clifton  <nickc@redhat.com>
 
 	* po/fr.po: New French translation.
